# django-q-mt

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
django_q_mt/: apps.py
django_q_mt/management/commands/: django_q_mt.py
